k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sharnom-ingress
  namespace: yellowbooks
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '30'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  rules:
  - http:
      paths:
      - path: /yellow-books
        pathType: Prefix
        backend:
          service:
            name: sharnom-api
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sharnom-web
            port:
              number: 80
